03-service_ingress/amzn2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: amznlinux2
spec:
  containers:
    - image: public.ecr.aws/amazonlinux/amazonlinux:2
      name: amznlinux2
      command: ["/bin/sh", "-c"]
      args:
        - |
          yum install systemd unzip -y
          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "/tmp/awscliv2.zip"
          unzip /tmp/awscliv2.zip -d /tmp/
          /tmp/aws/install
          /sbin/init
