03-service_ingress/02_service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mod08-my-nginx-nodeport
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 30000
  selector:
    run: mod08-my-nginx
