03-service_ingress/03_service-loadbarancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: mod08-my-nginx-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    run: mod08-my-nginx
