03-service_ingress/10_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mod08-my-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: mod08-my-nginx-clusterip
              servicePort: 80
